--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Learning Git</h1>
-    <p>This is new feature.</p>
+    <p>This is new feature (button).</p>
 </body>
 </html>
